--- a/index.html
+++ b/index.html
@@ -339,14 +339,14 @@
 		<div class="portfolio_container layout_padding">
 		  <div class="box-1">
 			<div class="img-box b-1">
-			  <img src="images/ll.jpg" style="width: 564px ; height: 304px;" alt="">
+			  <img src="images/ll.jpg" alt="">
 			  <div class="btn-box">
 		
 				</a>
 			  </div>
 			</div>
 			<div class="img-box b-2">
-			  <img src="images/lll.jpg" style="width: 564px ; height: 304px;" alt="">
+			  <img src="images/lll.jpg" alt="">
 			  <div class="btn-box">
 			
 	
@@ -356,7 +356,7 @@
 		  </div>
 		  <div class="box-2">
 			<div class="img-box b-3">
-			  <img src="images/lllll.jpg" style="width: 564px ; height: 304px;" alt="">
+			  <img src="images/lllll.jpg"  alt="">
 			  <div class="btn-box">
 				
 	
@@ -364,7 +364,7 @@
 			  </div>
 			</div>
 			<div class="img-box b-4">
-			  <img src="images/llll.jpg" style="width: 564px ; height: 304px;" alt="">
+			  <img src="images/llll.jpg"  alt="">
 			  <div class="btn-box">
 			
 	
